lang/macro/tests/ui/contract/fail/36-invalid-interface-name-3.rs
use liquid_lang as liquid;

#[liquid::interface(name = inherited)]
mod foo {
    extern "liquid" {
        fn bar();
    }
}

fn main() {}