lang/macro/tests/ui/contract/fail/36-invalid-interface-name-3.stderr
error: invalid interface name, please specified meta name info as `auto` or a literal string`
 --> $DIR/36-invalid-interface-name-3.rs:3:21
  |
3 | #[liquid::interface(name = inherited)]
  |                     ^^^^
